# cc_from_rust

./: .gitignore  MODULE.bazel  README.md  WORKSPACE
bazel/: calculator.cc  calculator.h
c/: BUILD  calculator.cc  calculator.h
cc/: BUILD  matrix.cc  matrix.h
rust/: BUILD  Cargo.toml  build.rs  ffi.rs  lib.rs  liblib.rlib
rust/src/: bridge.rs  lib.rs  main.rs
src/cpp/: BUILD  matrix_ops.cc  matrix_ops.h
src/rust/: BUILD
src/rust/src/: lib.rs
wrapper/: Cargo.toml  build.rs
wrapper/src/: lib.rs
